--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
       </TITLE>
    </HEAD>
 <BODY>
-   <H1>Hello World?</H1>
+   <H1>Hello World!</H1>
   <script src="bundle.js"></script>
 </BODY>
 </HTML>
